fix: responsive and spacing in ControlBar

--- a/src/components/ControlBar.module.css
+++ b/src/components/ControlBar.module.css
@@ -1,5 +1,7 @@
-.col {
-  padding: 0 1rem;
+.clearFix::after {
+  display: table-cell;
+  content: '';
+  clear: both;
 }
 
 .controlBar {
@@ -8,11 +10,30 @@
   padding: 0 50px;
 }
 
+.controlBar .inputDeviceButtons {
+  position: absolute;
+  display: flex;
+  justify-content: flex-start;
+  width: 9rem;
+}
+
+.controlBar .controlButtons {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .controlBar .buttonContainer {
   text-align: center;
   padding: 0.8rem 1rem 0.8rem 0;
   position: relative;
   color: #bdbdbd;
+  width: 4rem;
+  height: 70px;
+  float: left;
+  margin-left: 1rem;
+}
+.controlBar .buttonContainer:first-child {
+  margin-left: 0;
 }
 .controlBar .buttonContainer.noMoreBtn {
   padding: 0.8rem 0;
@@ -52,11 +73,14 @@
 .hideOnDesktop {
   display: block;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 920px) {
   .hideOnMobile {
     display: block;
   }
   .hideOnDesktop {
     display: none;
+  }
+  .controlBar .controlButtons {
+    justify-content: center;
   }
 }
